2003-12-27  Mark Kettenis  <kettenis@gnu.org>

	Merge from mainline:

	2003-10-31  Jim Blandy  <jimb@redhat.com>

	* elfread.c (elf_symtab_read): Allocate correct number of tail
	elements to sectinfo structure.  (Fix from Woody LaRue.)

2003-12-27  Mark Kettenis  <kettenis@gnu.org>

	* config/sparc/nbsd64.mh (NATDEPFILES): Add sparc64-nat.o.

	* Makefile.in (sparc64fbsd-tdep.o): Update dependencies.

	* sparc64-tdep.h (sparc64nbsd_gregset): Add extern declaration.
	* sparc64nbsd-nat.c: Rewrite.
	* sparc64nbsd-tdep.c: New file.
	* configure.tgt: Add sparc64-*-netbsd*.
	* configure.host: Add sparc64-*-netbsd*.
	* Makefile.in (ALLDEPFILES): Add sparc64nbsd-tdep.c and
	sparc64nbsd-nat.c.
	(sparc64nbsd-tdep.o, sparc64nbsd-nat.o): New dependencies.

	* config/sparc/nbsd64.mh (NATDEPFILES): Add sparc-nat.o.
	* config/sparc/nbsd64.mt (TDEPFILES): Add sparc64-tdep.o and
	sparc64nbsd-tdep.o.
	(TM_FILE): Set to tm-nbsd.h.
	* config/sparc/tm-nbsd64.h: Remove file.

	* sparc64fbsd-tdep.c: Include "frame.h", "frame-unwind.h",
	"trad-frame.h" and "gdb_assert.h".
	(BIAS): New define.
	(sparc64fbsd_pc_in_sigtramp, sparc64fbsd_sigtramp_frame_cache)
	(sparc64fbsd_sigtramp_frame_this_id)
	(sparc64fbsd_sigtramp_frame_prev_register): New functions.
	(sparc64fbsd_sigtramp_frame_unwind): New variable.
	(sparc64fbsd_sigtramp_frame_sniffer): New function.
	(sparc64fbsd_init_abi): Set pc_in_sigtramp, append
	sparc64fbsd_sigtramp_frame_sniffer.

2003-12-26  Mark Kettenis  <kettenis@gnu.org>

	* sparcbsd-nat.c: Remove file.
	* sparcbsd-nat.h: Remove file.
	* Makefile.in (ALLDEPFILES): Remove sparcbsd-nat.c
	(sparcbsd-nat.o): Remove dependency.

2003-12-26  Mark Kettenis  <kettenis@gnu.org>

	* sparc64-nat.c (sparc64_gregset_supplies_p): Return non-zero if
	REGNUM is SPARC64_FPRS_REGNUM.
	* sparc64-tdep.c (sparc64_supply_gregset): Deal with
	SPARC64_FPRS_REGNUM.
	(sparc64_collect_gregset): Likewise.
	* sparc64-tdep.h (r_fprs_offset): New define.
	(sparc64fbsd_gregset): Add define.